<resources>
    <string name="app_name">LoginApp</string>
    <string name="welcome_to_dango">Welcome To Dango</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sonya_gmail_com">sonya@gmail.com</string>
    <string name="register">Register</string>
    <string name="delete_account">Delete Account</string>
    <string name="dango">Dango</string>
    <string name="profile_logo">Profile Logo</string>
</resources>